languages/io-automaton-fe/src/test/resources/invalid/IllegalExpressions.ioautomaton
package invalid;

automaton IllegalExpressions {

    input Integer i;    
    output Integer a;

	state Idle;	
	initial Idle / {a = new Integer(5)};
	
	Idle {i == new Integer(5)} / {a = i};
}